--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 .logo{
     font-size: 1.5rem;
-    margin: .5rem;
+    margin: 1.5rem;
 }
 .links ul{
     display: flex;
@@ -31,7 +31,7 @@
 }
 .menubutton{
     position: absolute;
-    top: .75rem;
+    top: 1.5rem;
     right: 1rem;
     display: none;
     flex-direction: column;
@@ -51,5 +51,23 @@
     }
     .links{
         display: none;
+        width: 100%;
+    }
+    .navbar{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .links ul{
+        width: 100%;
+        flex-direction: column;
+    }
+    .links li{
+        text-align: center;
+    }
+    .links li a{
+        padding: .5rem 1rem;
+    }
+    .links.active{
+        display: flex;
     }
 }
