Font og burgermenu højde

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 .logo{
     font-size: 1.5rem;
     margin: 1.5rem;
+    font-family: fieldwork;
 }
 .links ul{
     display: flex;
@@ -31,7 +32,7 @@
 }
 .menubutton{
     position: absolute;
-    top: 1.5rem;
+    top: 2rem;
     right: 1rem;
     display: none;
     flex-direction: column;
