--- a/style.css
+++ b/style.css
@@ -88,8 +88,11 @@
         "footer footer footer footer";
     }
     main{
-        background-color: aqua;
         grid-area: main;
+    }
+    main img{
+        width: 100%;
+        height: 100%;
     }
     #content1{
         background-color: blue;
