--- a/style.css
+++ b/style.css
@@ -119,8 +119,11 @@
         height: 100%;
     }
     #content4{
-        background-color: darkorchid;
         grid-area: content4;
+    }
+    #content4 video{
+        width: 100%;
+        height: 100%;
     }
     .button{
         grid-area: button;
