--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@
     }
     #content4{
         grid-area: content4;
+        margin-bottom: 0.5rem;
     }
     #content4 video{
         width: 100%;
@@ -130,11 +131,14 @@
         text-align: center;
         border-style: groove;
         border-color: rgb(0, 0, 0);
+        padding: 0.4rem;
+        width: fit-content;
     }
     #content5{
         background-color: #2E4F68;
         grid-area: content5;
         padding: 2rem;
+        margin-top: 0.7rem;
     }
     #content5 p{
         color: #FDFDFD;
