--- a/style.css
+++ b/style.css
@@ -87,7 +87,8 @@
         ". content4 content4 ."
         ". button button ."
         "content5 content5 content5 content5"
-        "content6 content6 content7 content7"
+        ". content6 content6 ."
+        ". content7 content7 ."
         "footer footer footer footer";
     }
     main{
@@ -144,12 +145,21 @@
         color: #FDFDFD;
     }
     #content6{
-        background-color: green;
         grid-area: content6;
+        margin-top: 0.8rem;
+        margin-bottom: 0.8rem;
+    }
+    #content6 img{
+        width: 100%;
+        height: 100%;
     }
     #content7{
-        background-color: dodgerblue;
         grid-area: content7;
+    }
+    #content7 img{
+        width: 100%;
+        height: 100%;
+        margin-bottom: 0.8rem;
     }
     footer{
         background-color: #464646;
