--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@
     #content1 img{
         width: 100%;
         height: 100%;
+        padding-top: 3rem;
     }
     #content2{
         grid-area: content2;
@@ -164,5 +165,6 @@
     footer{
         background-color: #464646;
         grid-area: footer;
+        height: 6rem;
     }
 }
