--- a/style.css
+++ b/style.css
@@ -81,14 +81,11 @@
         grid-template-rows: auto;
         grid-template-areas: 
         "main main main main"
-        ". content1 content1 ."
-        ". content2 content2 ."
-        ". content3 content3 ."
-        ". content4 content4 ."
+        "content1 content1 content2 content2"
+        "content3 content3 content4 content4"
         ". button button ."
         "content5 content5 content5 content5"
-        ". content6 content6 ."
-        ". content7 content7 ."
+        "content6 content6 content7 content7"
         "footer footer footer footer";
     }
     main{
@@ -111,7 +108,9 @@
     }
     #content2 img{
         width: 100%;
-        height: 100%;
+        height: 78%;
+        margin-top: 3rem;
+        margin-left: 0.4rem;
     }
     #content3{
         grid-area: content3;
@@ -148,6 +147,7 @@
         color: #FDFDFD;
         margin-top: 0.8em;
         font-family: quasimoda;
+        text-align: center;
     }
     #content6{
         grid-area: content6;
@@ -163,7 +163,8 @@
     }
     #content7 img{
         width: 100%;
-        height: 100%;
+        height: 85%;
+        margin-top: 0.8rem;
         margin-bottom: 0.8rem;
     }
     footer{
