--- a/style.css
+++ b/style.css
@@ -129,8 +129,8 @@
     }
     #content4 video{
         width: 100%;
-        height: 100%;
-        margin-bottom: 4rem;
+        height: 120%;
+        padding-bottom: 4.5rem;
     }
     .button{
         grid-area: button;
@@ -139,6 +139,7 @@
         border-color: rgb(0, 0, 0);
         padding: 0.4rem;
         margin-top: 0.5rem;
+        margin-left: 4.7rem;
         width: fit-content;
         font-family: quasimoda;
     }
@@ -161,15 +162,15 @@
         margin-bottom: 0.8rem;
     }
     #content6 img{
-        width: 100%;
-        height: 100%;
+        width: 97%;
+        height: 97,5%;
     }
     #content7{
         grid-area: content7;
     }
     #content7 img{
         width: 100%;
-        height: 85%;
+        height: 99%;
         margin-top: 0.8rem;
         margin-bottom: 0.8rem;
     }
