--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@
         "content5 content5 content5 content5"
         "content6 content6 content7 content7"
         "footer footer footer footer";
+        grid-gap: 0.2rem;
     }
     main{
         grid-area: main;
