--- a/style.css
+++ b/style.css
@@ -46,6 +46,76 @@
     background-color: rgb(0, 0, 0);
     border-radius: 10px;
 }
+/* Grid container start*/
+.container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "main main main main main main main main main main main main"
+    ". . content1 content1 content1 content1 content2 content2 content2 content2 . ."
+    ". . content3 content3 content3 content3 content4 content4 content4 content4 . ."
+    ". . . . . button button . . . . ."
+    "content5 content5 content5 content5 content5 content5 content5 content5 content5 content5 content5 content5"
+    ". . content6 content6 content6 content6 content7 content7 content7 content7 . ."
+    "footer footer footer footer footer footer footer footer footer footer footer footer";
+    grid-gap: 1.2rem;
+}
+main{
+    grid-area: main;
+}
+main img{
+    width: 100%;
+    height: 100%;
+}
+#content1{
+    grid-area: content1;
+}
+#content1 img{
+    width: 100%;
+    height: 100%;
+}
+#content2{
+    grid-area: content2;
+}
+#content2 img{
+    width: 100%;
+    height: 100%;
+}
+#content3{
+    grid-area: content3;
+}
+#content3 img{
+    width: 100%;
+    height: 100%;
+}
+#content4{
+    grid-area: content4;
+}
+#content4 video{
+    width: 100%;
+    height: 100%;
+}
+#content5{
+    grid-area: content5;
+}
+#content6{
+    grid-area: content6;
+}
+#content6 img{
+    width: 100%;
+    height: 100%;
+}
+#content7{
+    grid-area: content7;
+}
+#content7 img{
+    width: 100%;
+    height: 100%;
+}
+footer{
+    grid-area: footer;
+}
 @media (max-width: 667px){
     /*navbar start*/
     .menubutton{
