--- a/style.css
+++ b/style.css
@@ -106,6 +106,15 @@ main img{
     width: 100%;
     height: 100%;
 }
+.button{
+    grid-area: button;
+    text-align: center;
+    margin-left: 2.2rem;
+    border-style: groove;
+    border-color: rgb(0, 0, 0);
+    padding:1rem;
+    width: fit-content;
+}
 #content5{
     grid-area: content5;
     background-color: #2E4F68;
