--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@
     margin: 1.5rem;
     font-family: fieldwork;
 }
+.logo a{
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+}
+.logo a:hover{
+    color:#2E4F68;
+}
 .links ul{
     display: flex;
 }
@@ -29,6 +36,7 @@
     margin-right: 1em;
     border-style: groove;
     border-color: rgb(0,0,0);
+    font-family: fieldwork;
 }
 .links li:hover{
     background-color: rgb(233, 230, 230);
