--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@
     grid-template-rows: auto;
     grid-template-areas: 
     "main main main main main main main main main main main main"
+    ". . . . . pictext . . . . . ."
     ". . content1 content1 content1 content1 content2 content2 content2 content2 . ."
     ". . content3 content3 content3 content3 content4 content4 content4 content4 . ."
     ". . . . . button button . . . . ."
@@ -85,6 +86,10 @@ main p{
 main img{
     width: 100%;
     height: 100%;
+}
+.pictext{
+    grid-area: pictext;
+    text-align: center;
 }
 #content1{
     grid-area: content1;
