--- a/style.css
+++ b/style.css
@@ -86,10 +86,15 @@ main p{
 main img{
     width: 100%;
     height: 100%;
+    position: relative;
 }
 .pictext{
     grid-area: pictext;
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 #content1{
     grid-area: content1;
@@ -197,6 +202,7 @@ footer h4{
         grid-template-rows: auto;
         grid-template-areas: 
         "main main main main"
+        ". pictext pictext ."
         "content1 content1 content2 content2"
         "content3 content3 content4 content4"
         ". button button ."
@@ -211,6 +217,14 @@ footer h4{
     main img{
         width: 100%;
         height: 100%;
+    }
+    .pictext{
+        grid-area: pictext;
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
     }
     main p{
         text-align: center;
