fontsize og font family

--- a/style.css
+++ b/style.css
@@ -225,6 +225,8 @@ footer h4{
         top: 40%;
         left: 50%;
         transform: translate(-50%,-50%);
+        font-size: 1.2em;
+        font-family: fieldwork;
     }
     main p{
         text-align: center;
