--- a/style.css
+++ b/style.css
@@ -92,9 +92,11 @@ main img{
     grid-area: pictext;
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%,-50%);
+    font-size: 1.6em;
+    font-family: fieldwork;
 }
 #content1{
     grid-area: content1;
