--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0%;
     padding: 0%;
 }
+/*navbar start*/
 .navbar{
     display: flex;
     justify-content: space-between;
@@ -57,6 +58,7 @@
     background-color: rgb(0, 0, 0);
     border-radius: 10px;
 }
+/*navbar slut*/
 /* Grid container start*/
 .container{
     display: grid;
@@ -169,6 +171,8 @@ footer h4{
     margin-left: 5rem;
     margin-top: 3rem;
 }
+/*grid slut*/
+/*Mobile version starter her*/
 @media (max-width: 667px){
     /*navbar start*/
     .menubutton{
