--- a/style.css
+++ b/style.css
@@ -213,7 +213,6 @@ footer h4{
         "content3 content3 content4 content4"
         ". button button ."
         "content5 content5 content5 content5"
-        "contenttxt content5txt . ."
         "content6 content6 content7 content7"
         "footer footer footer footer";
         grid-gap: 0.2rem;
@@ -287,15 +286,10 @@ footer h4{
         margin-top: 0.7rem;
         margin-bottom: 1rem;
         height: 15rem;
-        position: relative;
     }
-    .content5txt{
-        grid-area: content5txt;
+    #content5 p{
         color: #FDFDFD;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
+        margin-top: 0.8em;
         font-family: quasimoda;
         text-align: center;
     }
