--- a/portfolio.css
+++ b/portfolio.css
@@ -95,10 +95,14 @@
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: auto;
         grid-template-areas: 
-        "content1 content1 box1 box1"
-        "content2 content2 box2 box2"
-        "content3 content3 box3 box3"
-        "content4 content4 box4 box4"
+        "content1 content1 content1 content1"
+        "box1 box1 box1 box1"
+        "content2 content2 content2 content2"
+        "box2 box2 box2 box2"
+        "content3 content3 content3 content3"
+        "box3 box3 box3 box3"
+        "content4 content4 content4 content4"
+        "box4 box4 box4 box4"
         "footer footer footer footer";
     }
     #content1{
@@ -108,11 +112,26 @@
         width: 100%;
         height: 100%;
     }
+    #content1 h4{
+        text-align: center;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        font-size: 1.3em;
+    }
     .box1{
         grid-area: box1;
+        background-color: #2E4F68;
+        padding:5rem;
+        margin-top: 1rem;
     }
     #content2{
         grid-area: content2;
+    }
+    #content2 h4{
+        text-align: center;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        font-size: 1.3em;
     }
     #content2 img{
         width: 100%;
@@ -120,9 +139,18 @@
     }
     .box2{
         grid-area: box2;
+        background-color: #2E4F68;
+        padding: 5rem;
+        margin-top: 1rem;
     }
     #content3{
         grid-area: content3;
+    }
+    #content3 h4{
+        text-align: center;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        font-size: 1.3em;   
     }
     #content3 img{
         width: 100%;
@@ -130,9 +158,18 @@
     }
     .box3{
         grid-area: box3;
+        background-color: #2E4F68;
+        padding: 5rem;
+        margin-top: 1rem;
     }
     #content4{
         grid-area: content4;
+    }
+    #content4 h4{
+        text-align: center;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        font-size: 1.3em;
     }
     #content4 video{
         width: 100%;
@@ -140,8 +177,16 @@
     }
     .box4{
         grid-area: box4;
+        background-color: #2E4F68;
+        padding: 5rem;
     }
     footer{
         grid-area: footer;
+        padding: 3rem;
+        background-color: #464646;
+        margin-top: 1.3rem;
+    }
+    footer h4{
+        color: #FDFDFD;
     }
     }
