--- a/style.css
+++ b/style.css
@@ -341,6 +341,13 @@ footer h4{
     #rumrejse{
         grid-area: rumrejse;
     }
+    #rumrejse h4{
+        text-align: center;
+        margin-top: 1.4rem;
+        margin-bottom: 1.4rem;
+        font-size: 1.2em;
+        font-family: fieldwork;
+    }
     #rumrejse img{
         width: 100%;
         height: 100%;
@@ -360,6 +367,13 @@ footer h4{
     }
     #tango{
         display: tango;
+    }
+    #tango h4{
+        text-align: center;
+        margin-top: 1.4rem;
+        margin-bottom: 1.4rem;
+        font-size: 1.2em;
+        font-family: fieldwork;
     }
     #tango img{
         width: 100%;
@@ -381,6 +395,13 @@ footer h4{
     #volta{
         grid-area: volta;
     }
+    #volta h4{
+        text-align: center;
+        margin-top: 1.4rem;
+        margin-bottom: 1.4rem;
+        font-size: 1.2em;
+        font-family: fieldwork;
+    }
     #volta img{
         width: 100%;
         height: 100%;
@@ -400,6 +421,13 @@ footer h4{
     }
     #videotema{
         grid-area: videotema;
+    }
+    #videotema h4{
+        text-align: center;
+        margin-top: 1.4rem;
+        margin-bottom: 1.4rem;
+        font-size: 1.2em;
+        font-family: fieldwork;
     }
     #videotema video{
         width: 100%;
