--- a/style.css
+++ b/style.css
@@ -172,6 +172,70 @@ footer h4{
     margin-top: 3rem;
 }
 /*grid slut*/
+/*Galleri side desktop*/
+.container-galleri{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "rumrejse rumrejse rumrejse rumrejse rumrejse rumrejse box1 box1 box1 box1 box1 box1"
+    "tango tango tango tango tango tango box2 box2 box2 box2 box2 box2"
+    "volta volta volta volta volta volta box3 box3 box3 box3 box3 box3"
+    "videotema videotema videotema videotema videotema videotema box4 box4 box4 box4 box4 box4"
+    "footer footer footer footer footer footer footer footer footer footer footer footer";
+}
+.container-galleri a{
+    text-decoration: underline;
+    color: #FDFDFD;
+    margin-top: 1rem;
+    font-size: 1.1em;
+}
+.container-galleri a:hover{
+    color: rgb(233, 230, 230);
+}
+#rumrejse{
+    grid-area: rumrejse;
+}
+#rumrejse img{
+    width: 100%;
+    height: 100%;
+}
+.box1{
+    grid-area: box1;
+}
+#tango{
+    grid-area: tango;
+}
+#tango img{
+    width: 100%;
+    height: 100%;
+}
+.box2{
+    grid-area: box2;
+}
+#volta{
+    grid-area: volta;
+}
+#volta img{
+    width: 100%;
+    height: 100%;
+}
+.box3{
+    grid-area: box3;
+}
+#videotema{
+    grid-area: videotema;
+}
+#videotema video{
+    width: 100%;
+    height: 100%;
+}
+.box4{
+    grid-area: box4;
+}
+footer{
+    grid-area: footer;
+}
 /*Mobile version starter her*/
 @media (max-width: 667px){
     /*navbar start*/
