--- a/style.css
+++ b/style.css
@@ -476,10 +476,10 @@ footer h4{
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
     grid-template-areas: 
-    "rumrejse rumrejse rumrejse rumrejse rumrejse rumrejse box1 box1 box1 box1 box1 box1"
-    "tango tango tango tango tango tango box2 box2 box2 box2 box2 box2"
-    "volta volta volta volta volta volta box3 box3 box3 box3 box3 box3"
-    "videotema videotema videotema videotema videotema videotema box4 box4 box4 box4 box4 box4"
+    "rumrejse rumrejse rumrejse rumrejse rumrejse rumrejse rumrejse . box1 box1 box1 box1"
+    "tango tango tango tango tango tango tango . box2 box2 box2 box2"
+    "volta volta volta volta volta volta volta . box3 box3 box3 box3"
+    "videotema videotema videotema videotema videotema videotema videotema . box4 box4 box4 box4"
     "footer footer footer footer footer footer footer footer footer footer footer footer";
 }
 .container-galleri a{
@@ -500,6 +500,15 @@ footer h4{
 }
 .box1{
     grid-area: box1;
+    background-color: #2E4F68;
+    margin-top: 1.2rem;
+    margin-right: 5rem;
+    padding: 1rem;
+}
+.box1 p{
+    color: #FDFDFD;
+    text-align: center;
+    margin-top: 2em;
 }
 #tango{
     grid-area: tango;
@@ -510,6 +519,15 @@ footer h4{
 }
 .box2{
     grid-area: box2;
+    background-color: #2E4F68;
+    margin-top: 1.2rem;
+    margin-right: 5rem;
+    padding: 1rem;
+}
+.box2 p{
+    color: #FDFDFD;
+    text-align: center;
+    margin-top: 2em;
 }
 #volta{
     grid-area: volta;
@@ -520,6 +538,15 @@ footer h4{
 }
 .box3{
     grid-area: box3;
+    background-color: #2E4F68;
+    margin-top: 1.2rem;
+    margin-right: 5rem;
+    padding: 1rem;
+}
+.box3 p{
+    text-align: center;
+    margin-top: 2em;
+    color: #FDFDFD;   
 }
 #videotema{
     grid-area: videotema;
@@ -527,9 +554,20 @@ footer h4{
 #videotema video{
     width: 100%;
     height: 100%;
+    margin-bottom: 1rem;
 }
 .box4{
     grid-area: box4;
+    background-color: #2E4F68;
+    margin-top: 1.2rem;
+    margin-bottom: 1rem;
+    margin-right: 5rem;
+    padding: 1rem;
+}
+.box4 p{
+    text-align: center;
+    margin-top: 2em;
+    color: #FDFDFD;      
 }
 footer{
     grid-area: footer;
