--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@
     ". . . . . button button . . . . ."
     "content5 content5 content5 content5 content5 content5 content5 content5 content5 content5 content5 content5"
     ". . content6 content6 content6 content6 content7 content7 content7 content7 . ."
+    ". . content8 content8 content8 content8 content9 content9 content9 content9 . ."
     "footer footer footer footer footer footer footer footer footer footer footer footer";
     grid-gap: 1.2rem;
 }
@@ -161,6 +162,20 @@ main img{
     width: 100%;
     height: 100%;
 }
+#content8{
+    grid-area: content8;
+}
+#content8 img{
+    width: 100%;
+    height: 100%;
+}
+#content9{
+    grid-area: content9;
+}
+#content9 img{
+    width: 100%;
+    height: 100%;
+}
 footer{
     grid-area: footer;
     background-color: #464646;
@@ -216,6 +231,8 @@ footer h4{
         "content5 content5 content5 content5"
         ". content6 content6 ."
         ". content7 content7 ."
+        ". content8 content8 ."
+        ". content9 content9 ."
         "footer footer footer footer";
         grid-gap: 0.2rem;
     }
@@ -308,6 +325,22 @@ footer h4{
     #content7 img{
         width: 100%;
         height: 97.5%;
+    }
+    #content8{
+        width: 100%;
+        height: 100%;
+    }
+    #content8 img{
+        width: 100%;
+        height: 100%;
+    }
+    #content9{
+        width: 100%;
+        height: 100%;
+    }
+    #content9 img{
+        width: 100%;
+        height: 100%;
     }
     footer{
         background-color: #464646;
