--- a/style.css
+++ b/style.css
@@ -333,6 +333,7 @@ footer h4{
     #content8 img{
         width: 100%;
         height: 100%;
+        padding-bottom: 0.2rem;
     }
     #content9{
         width: 100%;
@@ -341,6 +342,7 @@ footer h4{
     #content9 img{
         width: 100%;
         height: 100%;
+        padding-bottom: 0.5rem;
     }
     footer{
         background-color: #464646;
