Baggrundsfarve på nav

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     justify-content: space-between;
     align-items: center;
     border-bottom-style: groove;
+    background-color: #FDFDFD;
     border-color: rgb(0, 0, 0);
 }
 .logo{
