--- a/style.css
+++ b/style.css
@@ -4,60 +4,44 @@
     padding: 0%;
 }
 /*navbar start*/
-.navbar{
+nav{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    border-bottom-style: groove;
+    min-height: 8vh;
     background-color: #FDFDFD;
-    border-color: rgb(0, 0, 0);
+    font-family: fieldwork;
 }
 .logo{
-    font-size: 1.5rem;
-    margin: 1.5rem;
-    font-family: fieldwork;
+    color: rgb(0, 0, 0);
+    font-size: 1.5em;
 }
 .logo a{
     text-decoration: none;
     color: rgb(0, 0, 0);
 }
-.logo a:hover{
-    color:#2E4F68;
-}
-.links ul{
+.links{
     display: flex;
+    justify-content: space-around;
+    width: 20%;
 }
 .links li{
     list-style: none;
 }
-.links li a{
-    text-decoration: none;
+.links a{
     color: rgb(0, 0, 0);
-    padding: 1rem;
-    display: block;
-    margin-right: 1em;
-    border-style: groove;
-    border-color: rgb(0,0,0);
-    font-family: fieldwork;
+    text-decoration: none;
+    font-size: 1.2em;
 }
-.links li:hover{
-    background-color: rgb(233, 230, 230);
-}
-.menubutton{
-    position: absolute;
-    top: 2rem;
-    right: 1rem;
+.burger{
     display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 21px;
+    cursor: pointer;
 }
-.menubutton .bar{
-    height: 3px;
-    width: 100%;
+.burger div{
+    width: 25px;
+    height: 4px;
     background-color: rgb(0, 0, 0);
-    border-radius: 10px;
+    margin: 5px;
 }
 /*navbar slut*/
 /* Grid container start*/
@@ -197,29 +181,40 @@ footer h4{
 /*Mobile version starter her*/
 @media (max-width: 667px){
     /*navbar start*/
-    .menubutton{
-        display: flex;
+    body{
+        overflow-x: hidden;
     }
     .links{
-        display: none;
-        width: 100%;
-    }
-    .navbar{
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        background-color: rgb(171, 171, 171);
+        display: flex;
         flex-direction: column;
-        align-items: flex-start;
-    }
-    .links ul{
-        width: 100%;
-        flex-direction: column;
+        align-items: center;
+        width: 40%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
     }
     .links li{
-        text-align: center;
+        opacity: 0;
     }
-    .links li a{
-        padding: .5rem 1rem;
+    .burger{
+        display: block;
     }
-    .links.active{
-        display: flex;
+    .nav-active{
+        transform: translateX(0);
+    }
+    @keyframes navlinkfade{
+        from{
+            opacity: 0;
+            transform: translateX(50px);
+        }
+        to{
+            opacity: 1;
+            transform: translateX(0px);
+        }
     }
     /*navbar slut*/
     /*grid container start*/
