--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ nav{
     height: 4px;
     background-color: rgb(0, 0, 0);
     margin: 5px;
+    transition: all 0.3s ease;
 }
 /*navbar slut*/
 /* Grid container start*/
@@ -217,6 +218,15 @@ footer h4{
             opacity: 1;
             transform: translateX(0px);
         }
+    }
+    .toggle .linje1{
+        transform: rotate(-45deg) translate(-5px,6px);
+    }
+    .toggle .linje2{
+        opacity: 0;
+    }
+    .toggle .linje3{
+        transform: rotate(+45deg) translate(-5px,-6px);
     }
     /*navbar slut*/
     /*grid container start*/
