--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ nav{
     text-decoration: none;
     color: rgb(0, 0, 0);
 }
+.logo a:hover{
+    color: #2E4F68;
+}
 .links{
     display: flex;
     justify-content: space-around;
@@ -34,6 +37,9 @@ nav{
     color: rgb(0, 0, 0);
     text-decoration: none;
     font-size: 1.2em;
+}
+.links a:hover{
+    color: #2E4F68;
 }
 .burger{
     display: none;
