--- a/style.css
+++ b/style.css
@@ -329,6 +329,8 @@ footer h4{
         margin-top: 0.7rem;
         margin-bottom: 1rem;
         height: 15rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
     }
     #content5 p{
         color: #FDFDFD;
