--- a/style.css
+++ b/style.css
@@ -559,6 +559,7 @@ footer h4{
     "volta volta volta volta volta volta volta . box3 box3 box3 box3"
     "videotema videotema videotema videotema videotema videotema videotema . box4 box4 box4 box4"
     "footer footer footer footer footer footer footer footer footer footer footer footer";
+    grid-gap: 1.8rem;
 }
 .container-galleri a{
     text-decoration: underline;
@@ -576,6 +577,7 @@ footer h4{
     width: 100%;
     height: 100%;
     margin-left: 1.5rem;
+    margin-top: 1.5rem;
 }
 .box1{
     grid-area: box1;
