--- a/style.css
+++ b/style.css
@@ -282,6 +282,7 @@ footer h4{
     #content1 img{
         width: 100%;
         height: 100%;
+        padding-top: 0.8rem;
     }
     #content2{
         grid-area: content2;
