--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ footer h4{
     color: #FDFDFD;
     margin-left: 5rem;
     margin-top: 3rem;
+    font-family: fieldwork;
 }
 /*grid slut*/
 /*Mobile version starter her*/
