Ændring af p tekst og styling

--- a/style.css
+++ b/style.css
@@ -143,6 +143,8 @@ main img{
 #content5 p{
     color: #FDFDFD;
     text-align: center;
+    margin-left: 1.5em;
+    margin-right: 2em;
     font-family: quasimoda;
 }
 #content6{
