--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ main img{
 #content4{
     grid-area: content4;
 }
-#content4 video{
+#content4 iframe{
     width: 100%;
     height: 100%;
 }
@@ -304,7 +304,7 @@ footer h4{
     #content4{
         grid-area: content4;
     }
-    #content4 video{
+    #content4 iframe{
         width: 100%;
         height: 100%;
     }
@@ -516,7 +516,7 @@ footer h4{
         font-size: 1.2em;
         font-family: fieldwork;
     }
-    #videotema video{
+    #videotema iframe{
         width: 100%;
         height: 100%;
     }
