--- a/style.css
+++ b/style.css
@@ -584,6 +584,7 @@ footer h4{
     height: 100%;
     margin-left: 1.5rem;
     margin-top: 1.5rem;
+    padding-bottom: 1.2rem;
 }
 .box1{
     grid-area: box1;
