--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ footer h4{
         width: 40%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
+        display: none;
     }
     .links li{
         opacity: 0;
