--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ main img{
     grid-area: pictext;
     text-align: center;
     position: absolute;
-    top: 70%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     font-size: 1.6em;
@@ -122,7 +122,7 @@ main img{
 .button{
     grid-area: button;
     text-align: center;
-    margin-left: 3rem;
+    margin: auto;
     border-style: groove;
     border-color: rgb(0, 0, 0);
     padding:1rem;
@@ -312,12 +312,12 @@ footer h4{
     .button{
         grid-area: button;
         text-align: center;
+        margin: auto;
         border-style: groove;
         border-color: rgb(0, 0, 0);
         border-width: 2px;
         padding: 0.5rem;
         margin-top: 0.5rem;
-        margin-left: 5.5rem;
         width: fit-content;
         font-family: quasimoda;
         border-radius: 10%;
